# python-poetry-ci-example

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: semantic.yml
.github/workflows/: ci.yml  release.yml
src/math_utils/: breaking.py  features.py  mod_2.py
tests/: test_add.py  test_multiply.py
