[tool.poetry]
name = "p"
version = "1.2.0"
description = ""
authors = ["Daniel Pape"]
readme = "README.md"
packages = [{include = "math_utils", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.0"
python-semantic-release = "^9.7.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
commitizen = "^3.26.0"

[tool.commitizen]
name = "cz_conventional_commits"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.semantic_release]
version_variable = [
    "src/math_utils/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
version_pattern = [
    "README.md:rev: v{version}",
]
tag_format = "v{version}"

branch = "main"
build_command = "poetry build"
upload_to_pypi = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
